--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ src="https://www.facebook.com/tr?id=1708019822805724&ev=PageView&noscript=1"
             <div class="container-fluid">
                 <div class="row pad10">
                     <div class="row">
-                      <a href="portfolio/index.html" target="_self">
+                      <a href="portfolio.html" target="_self">
                             <div class="col-xs-12 col-md-12 zpacio">
                          <h5 style="text-align:center">PORTFOLIO <i style="color:yellow;" class="fa fa-star"></i></h5>
                         </div>
