--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@ src="https://www.facebook.com/tr?id=1708019822805724&ev=PageView&noscript=1"
                 
 
             <div class="logo">
-				<a href="../index.html"><img src="img/88x88.png" alt="Logo" class="animated bounceInDown" width="88" /></a>  
+				<a href="index.html"><img src="img/88x88.png" alt="Logo" class="animated bounceInDown" width="88" /></a>  
 			</div>
                 </div>
 
