--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ src="https://www.facebook.com/tr?id=1708019822805724&ev=PageView&noscript=1"
 
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">Hasta 12 cuotas sin inter&eacute;s a trav&eacute;s de MercadoPago</h4>
+                <h4 class="modal-title" id="myModalLabel">Pagá en cuotas a trav&eacute;s de Mercado Pago</h4>
             </div>
 
             <div class="modal-body">
