--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ src="https://www.facebook.com/tr?id=1708019822805724&ev=PageView&noscript=1"
                         <img src="img/clientes/mistral.jpg" alt="" class="img-responsive center-block"/>
                         </div>
                         <div class="col-xs-6 col-md-4 zpacio">
-                        <img src="img/clientes/madnessclothing.png" alt="" class="img-responsive center-block"/>
+                        <img src="img/clientes/patagonia.jpg" alt="" class="img-responsive center-block"/>
                         </div>
                          <div class="col-xs-6 col-md-4 zpacio">
                         <img src="img/clientes/stylo.jpg" alt="" class="img-responsive center-block"/>
@@ -267,7 +267,7 @@ src="https://www.facebook.com/tr?id=1708019822805724&ev=PageView&noscript=1"
                         <img src="img/clientes/humawaca.png" alt="" class="img-responsive center-block"/>
                         </div>   
                         <div class="col-xs-6 col-md-4 zpacio">
-                        <img src="img/clientes/meryracauchi.jpg" alt="" class="img-responsive center-block"/>
+                        <img src="img/clientes/madnessclothing.png" alt="" class="img-responsive center-block"/>
                         </div>                          
                     </div>
                 </div>
