--- a/networks.html
+++ b/networks.html
@@ -146,7 +146,7 @@
                 <div class="row">
 
                     <div>
-                        </a><img src=img/bannerpack.png>
+                        <img src=img/bannerpack.png>
                     </div>
                     
                 </div>
