--- a/index.html
+++ b/index.html
@@ -140,27 +140,27 @@
                 <div class="row pad5">
                     <div class="row">
                         <div class="col-xs-6 col-md-4 zpacio">
-                        <h5 style="text-align:center"><i style="color:#00aece" class="icon-logistica"></i></h5>
+                        <h5 style="text-align:center"><i class="icon-logistica"></i></h5>
                         <h2 style="text-align:center">Logística sin cargo</h2>
                         </div>
                         <div class="col-xs-6 col-md-4 zpacio">
-                        <h5 style="text-align:center"><i style="color:#00aece" class="icon-tiempo"></i></h5>
+                        <h5 style="text-align:center"><i class="icon-tiempo"></i></h5>
                         <h2 style="text-align:center">Entrega en 72hs</h2>
                         </div>
                         <div class="col-xs-6 col-md-4 zpacio">
-                        <h5 style="text-align:center"><i style="color:#00aece" class="icon-descarga"></i></h5>
+                        <h5 style="text-align:center"><i class="icon-descarga"></i></h5>
                         <h2 style="text-align:center">Descarga inmediata</h2>
                         </div>
                          <div class="col-xs-6 col-md-4 zpacio">
-                        <h5 style="text-align:center"><i style="color:#00aece" class="icon-tamano"></i></h5>
+                        <h5 style="text-align:center"><i class="icon-tamano"></i></h5>
                         <h2 style="text-align:center">Todos los tamaños</h2>
                         </div>
                         <div class="col-xs-6 col-md-4 zpacio">
-                        <h5 style="text-align:center"><i style="color:#00aece" class="icon-fondo"></i></h5>
+                        <h5 style="text-align:center"><i class="icon-fondo"></i></h5>
                         <h2 style="text-align:center">Fondos a elección</h2>
                         </div>
                          <div class="col-xs-6 col-md-4 zpacio">
-                        <h5 style="text-align:center"><i style="color:#00aece" class="icon-pordia"></i></h5>
+                        <h5 style="text-align:center"><i class="icon-pordia"></i></h5>
                         <h2 style="text-align:center">Productos por día</h2>
                         </div>
                     </div>
